package eapli.base.clientmanagement.repositories;

import eapli.base.clientmanagement.domain.Client;
import eapli.framework.domain.repositories.DomainRepository;


public interface ClientRepository extends DomainRepository<Long, Client> {

}
